--- a/test/fixtures/progresses.yml
+++ b/test/fixtures/progresses.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: progresses
+#
+#  id          :integer          not null, primary key
+#  status      :integer          default(0), not null
+#  note        :text
+#  resource_id :integer
+#  user_id     :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
