--- a/config/database.yml
+++ b/config/database.yml
@@ -5,18 +5,22 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  username: root
+  password:
+  host: localhost
   pool: 5
-  timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: progress_dev
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: progress_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: progress_prod
